# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

import("//extensions/buildflags/buildflags.gni")
import("//mises/components/ipfs/buildflags/buildflags.gni")

mises_browser_autocomplete_sources = [
  "//mises/browser/autocomplete/mises_autocomplete_scheme_classifier.cc",
  "//mises/browser/autocomplete/mises_autocomplete_scheme_classifier.h",
]

mises_browser_autocomplete_deps = [
  "//base",
  "//mises/common",
  "//chrome/browser/profiles:profile",
]

if (enable_ipfs) {
  mises_browser_autocomplete_deps += [ "//mises/components/ipfs" ]
}
