# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//mises/components/ipfs/buildflags/buildflags.gni")
import("//extensions/buildflags/buildflags.gni")

mises_browser_browsing_data_sources = [
  "//mises/browser/browsing_data/brave_browsing_data_remover_delegate.cc",
  "//mises/browser/browsing_data/brave_browsing_data_remover_delegate.h",
  "//mises/browser/browsing_data/brave_clear_browsing_data.cc",
  "//mises/browser/browsing_data/brave_clear_browsing_data.h",
]

mises_browser_browsing_data_deps = [
  "//base",
  "//mises/components/ipfs/buildflags",
  "//chrome/browser:browser_process",
  "//chrome/browser/browsing_data:constants",
  "//chrome/browser/profiles:profile",
  "//chrome/common",
  "//components/browsing_data/core",
  "//components/content_settings/core/browser",
  "//components/content_settings/core/common",
  "//components/prefs",
  "//content/public/browser",
]

if (enable_extensions) {
  mises_browser_browsing_data_deps += [
    "//mises/common/extensions/api",
    "//extensions/browser",
  ]
}

if (enable_ipfs) {
  mises_browser_browsing_data_deps += [ "//mises/components/ipfs" ]
}
