# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

mises_browser_ephemeral_storage_sources = [
  "//mises/browser/ephemeral_storage/brave_ephemeral_storage_service_delegate.cc",
  "//mises/browser/ephemeral_storage/brave_ephemeral_storage_service_delegate.h",
  "//mises/browser/ephemeral_storage/ephemeral_storage_service_factory.cc",
  "//mises/browser/ephemeral_storage/ephemeral_storage_service_factory.h",
  "//mises/browser/ephemeral_storage/ephemeral_storage_tab_helper.cc",
  "//mises/browser/ephemeral_storage/ephemeral_storage_tab_helper.h",
  "//mises/browser/ephemeral_storage/tld_ephemeral_lifetime.cc",
  "//mises/browser/ephemeral_storage/tld_ephemeral_lifetime.h",
]

mises_browser_ephemeral_storage_deps = [
  "//base",
  "//mises/components/ephemeral_storage",
  "//chrome/browser/profiles",
  "//chrome/browser/ui",
  "//components/content_settings/core/browser",
  "//content/public/browser",
  "//net",
  "//third_party/blink/public/common",
]
