import("//build/config/features.gni")
import("//components/gcm_driver/config.gni")
import("//mises/components/ipfs/buildflags/buildflags.gni")


source_set("extensions") {
  # Remove when https://github.com/brave/brave-browser/issues/10661 is resolved
  check_includes = false
  sources = [
    "mises_extensions_browser_api_provider.cc",
    "mises_extensions_browser_api_provider.h",
    "mises_extensions_browser_client_impl.cc",
    "mises_extensions_browser_client_impl.h",
    "mises_component_loader.cc",
    "mises_component_loader.h",  
    "updater/mises_update_client_config.cc",
    "updater/mises_update_client_config.h",
    "mises_webstore_installer.cc",
    "mises_webstore_installer.h",
  ]

  deps = [
    ":resources",
    "//base",
   
    "//mises/common",
    "//mises/common/extensions/api",
    "//mises/components/decentralized_dns/content",
    "//mises/components/ipfs/buildflags",
    "//chrome/browser/extensions",
    "//chrome/common",
    "//components/gcm_driver:gcm_buildflags",
    "//components/gcm_driver:gcm_driver",
    "//components/omnibox/browser:browser",
    "//components/prefs",
    "//components/services/patch/content",
    "//components/services/unzip/content",
    "//components/update_client:patch_impl",
    "//components/update_client:unzip_impl",
    "//content/public/browser",
    "//extensions/browser",
    "//extensions/common",
    "//third_party/re2",
    "//ui/base",
    "//url",
  ]

  if (enable_ipfs) {
    sources += [
      "api/ipfs_api.cc",
      "api/ipfs_api.h",
    ]
    deps += [ "//mises/components/ipfs" ]
  }

}

group("resources") {
  deps = [
    "//mises/components/mises_extension:static_resources",
  ]
}

