# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# you can obtain one at http://mozilla.org/MPL/2.0/.

mises_extensions_resources = [
  "//mises/browser/extensions:resources",
  "//mises/components/mises_webtorrent/browser/buildflags",
]
