mises_extensions_sources = [

    "//mises/browser/extensions/api/mises_private/mises_private_api.cc",
    "//mises/browser/extensions/api/mises_private/mises_private_api.h",

    "//mises/browser/extensions/api/rewards_notifications_api.cc",
    "//mises/browser/extensions/api/rewards_notifications_api.h",
    
]

if (is_android) {
  mises_extensions_sources += [
    "//mises/chromium_src/chrome/browser/extensions/global_shortcut_listener_android.cc",
    "//mises/chromium_src/chrome/browser/extensions/global_shortcut_listener_android.h",
    "system_display/display_info_provider_aura.cc",
    "system_display/display_info_provider_aura.h",
  ]
}

