import("//mises/components/brave_wayback_machine/buildflags/buildflags.gni")
import("//mises/components/ipfs/buildflags/buildflags.gni")
import("//build/config/features.gni")

source_set("infobars") {
  # Remove when https://github.com/brave/brave-browser/issues/10649 is resolved
  check_includes = false
  sources = [
#    "brave_confirm_p3a_infobar_delegate.cc",
#    "brave_confirm_p3a_infobar_delegate.h",
    "sync_cannot_run_infobar_delegate.cc",
    "sync_cannot_run_infobar_delegate.h",
    "sync_v2_migrate_infobar_delegate.cc",
    "sync_v2_migrate_infobar_delegate.h",
  ]

  deps = [
    "//base",
    "//mises/app:mises_generated_resources_grit",
    "//mises/browser/ui",
    "//mises/common:common",
    "//mises/components/brave_sync:features",
    "//mises/components/brave_sync:prefs",
#    "//mises/components/p3a",
    "//chrome/app:chromium_strings",
    "//chrome/browser/ui",
    "//components/infobars/content",
    "//components/infobars/core",
    "//components/prefs",
    "//components/strings",
    "//ui/base",
    "//ui/views",
    "//url",
  ]

  if (enable_ipfs) {
    deps += [
      "//mises/components/ipfs",
      "//components/user_prefs",
    ]
  }

  if (enable_brave_wayback_machine) {
    sources += [
      "brave_wayback_machine_delegate_impl.cc",
      "brave_wayback_machine_delegate_impl.h",
    ]

    deps += [
      "//mises/components/brave_wayback_machine",
      "//mises/components/constants",
    ]
  }
}
